Modifier menu always uses modifier under cursor #87401

Closed
opened 2021-04-11 20:58:56 +02:00 by Paolo Furani · 12 comments

System Information
Operating system: Linux-4.15.0-140-generic-x86_64-with-glibc2.27 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 5500 (BDW GT2) Intel Open Source Technology Center 4.6 (Core Profile) Mesa 20.0.8

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-10 16:36, hash: ed5507de8a
Worked: (newest version of Blender that worked as expected)

Short description of error
When I apply the subdivision modifiers, the order is changed and this operation took a while, I attached a video showing this and looking on it, is visible that is highlighted the boolean but I apply the subdivision and is applied the boolean. I also attached a simple blender file.

Exact steps for others to reproduce the error
Simply applying the subdivision modifiers, this cause the change of modifier order, and Blender apply the boolean instead of subdivision modifiers.
Bug-Order_Modifiers.blend
Bug_modifier.mp4

**System Information** Operating system: Linux-4.15.0-140-generic-x86_64-with-glibc2.27 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 5500 (BDW GT2) Intel Open Source Technology Center 4.6 (Core Profile) Mesa 20.0.8 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-10 16:36, hash: `ed5507de8a` Worked: (newest version of Blender that worked as expected) **Short description of error** When I apply the subdivision modifiers, the order is changed and this operation took a while, I attached a video showing this and looking on it, is visible that is highlighted the boolean but I apply the subdivision and is applied the boolean. I also attached a simple blender file. **Exact steps for others to reproduce the error** Simply applying the subdivision modifiers, this cause the change of modifier order, and Blender apply the boolean instead of subdivision modifiers. [Bug-Order_Modifiers.blend](https://archive.blender.org/developer/F9929658/Bug-Order_Modifiers.blend) [Bug_modifier.mp4](https://archive.blender.org/developer/F9929657/Bug_modifier.mp4)
Author

Added subscriber: @pafurijaz-4

Added subscriber: @pafurijaz-4

#87780 was marked as duplicate of this issue

#87780 was marked as duplicate of this issue

Added subscriber: @Wovchick

Added subscriber: @Wovchick
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-04-12 07:18, hash: 175c1382da.

I can confirm this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-04-12 07:18, hash: `175c1382da`.
Member

Took a quick look and I believe this is because of 9f323e9bf7.

I think what is happening here is that clicking the Apply button will call the same operator as using the shortcut when hovering over the panel. Because the Apply button is "over" the modifier below it when the modifiers are collapsed, it will apply the wrong modifier.

Bumping the prior on this since it is an important bug to fix!
CC @HooglyBoogly

Took a quick look and I believe this is because of 9f323e9bf7. I think what is happening here is that clicking the `Apply` button will call the same operator as using the shortcut when hovering over the panel. Because the `Apply` button is "over" the modifier below it when the modifiers are collapsed, it will apply the wrong modifier. Bumping the prior on this since it is an important bug to fix! CC @HooglyBoogly
Member

Here a video that shows what I mean:
Peek 2021-04-12 13-05.webm

Here a video that shows what I mean: [Peek 2021-04-12 13-05.webm](https://archive.blender.org/developer/F9930354/Peek_2021-04-12_13-05.webm)
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey changed title from The order of the modifiers changes during the application. to Modifier menu always uses modifier under cursor 2021-04-24 19:47:06 +02:00
Member

Added subscribers: @Igor-11, @PratikPB2123, @Calra

Added subscribers: @Igor-11, @PratikPB2123, @Calra

This issue was referenced by fe79935f00

This issue was referenced by fe79935f0021755ba133020a3414f6c29b46e9aa
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-04-27 05:17:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87401
No description provided.